fix: small 4k monitor issues

--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -2,23 +2,30 @@
 env = XCURSOR_SIZE,24
 env = WLR_NO_HARDWARE_CURSORS,1
 
+# XDG
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+
 # SSH
 env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/gcr/ssh
 env = SSH_ASKPASS=/usr/bin/seahorse/ssh-askpass
 env = SSH_ASKPASS_REQUIRE=prefer
 
-# Theming
+# GTK
 env = GTK_THEME,catppuccin-mocha-peach-standard+default
-env = QT_QPA_PLATFORMTHEME,qt5ct
+env = GTK_SCALE,1
+
+# Mozilla
+env = MOZ_ENABLE_WAYLAND,1
+env = MOZ_DISABLE_RDD_SANDBOX,1
 
 # Wayland
-env = XDG_SESSION_TYPE,wayland
 env = GDK_BACKEND,wayland,x11
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
-env = MOZ_DISABLE_RDD_SANDBOX,1
-env = MOZ_ENABLE_WAYLAND,1
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = OZONE_PLATFORM,wayland
 
 # NVIDIA
 env = _JAVA_AWT_WM_NONREPARENTING=1
@@ -28,9 +35,15 @@ env = __GL_GSYNC_ALLOWED,1
 env = __GL_VRR_ALLOWED,1
 env = WLR_USE_LIBINPUT,1
 env = WLR_RENDERER_ALLOW_SOFTWARE,1
-env = QT_QPA_PLATFORM,wayland;xcb
 env = WLR_DRM_NO_ATOMIC,1
+
+# QT
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
 # testing
 env = LIBVA_DRIVER_NAME,nvidia
 # env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = APPIMAGELAUNCHER_DISABLE,1
