--- a/hypr/general.conf
+++ b/hypr/general.conf
@@ -44,10 +44,17 @@ decoration {
         passes = 1
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+      enabled = true
+      range = 4
+      render_power = 4
+      color = rgba(1a1a1aee)
+    }
+
+    # drop_shadow = yes
+    # shadow_range = 4
+    # shadow_render_power = 3
+    # col.shadow = rgba(1a1a1aee)
 }
 
 # Tiling Layout
@@ -70,6 +77,8 @@ misc {
     vfr=false
     vrr=2
     # no_vfr=1
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
 }
 
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
