--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -1,7 +1,10 @@
 # Monitors
-monitor=DP-1,highrr,0x0,1
+# monitor=DP-1,highrr,0x0,1
+# monitor=HDMI-A-1,highres,-2160x-1100,1,transform,3
+# monitor=DP-2,preferred,0x-1440,1
+monitor=DP-2,highrr,0x0,1
 monitor=HDMI-A-1,highres,-2160x-1100,1,transform,3
-monitor=DP-2,preferred,0x-1440,1
+monitor=DP-1,highrr,0x-1440,1
 
 # Execs (Startup applications)
 exec-once=gammastep -l 39.962:-82.996
@@ -10,19 +13,19 @@ exec-once=sleep 5; streamcontroller -b
 exec-once=sleep 5; obsidian --ozone-platform=wayland --ozone-platform-hint=auto --enable-features=UseOzonePlatform,WaylandWindowDecorations --disable-gpu
 
 # Workspaces
-workspace=name:1, monitor:DP-1, persistent:true, default:true
-workspace=name:2, monitor:DP-1, persistent:true
-workspace=name:3, monitor:DP-1, persistent:true
-workspace=name:4, monitor:DP-1, persistent:true
+workspace=name:1, monitor:DP-2, persistent:true, default:true
+workspace=name:2, monitor:DP-2, persistent:true
+workspace=name:3, monitor:DP-2, persistent:true
+workspace=name:4, monitor:DP-2, persistent:true
 workspace=name:right-monitor, monitor:HDMI-A-1, default:true, persistent:true
-workspace=name:top-monitor, monitor:DP-2, default:true, persistent:true
+workspace=name:top-monitor, monitor:DP-1, default:true, persistent:true
 
 # Move Google Meet to Vertical Monitor and Tile
 windowrulev2 = tile,title:^(Google Meet)
 windowrulev2 = monitor HDMI-A-1,title:^(Google Meet)
 
 # Move Spotify to Top Monitor
-windowrulev2 = monitor DP-2,title:^(Spotify)$
+windowrulev2 = monitor DP-1,title:^(Spotify)$
 
 # Minecraft
 # windowrulev2 = center,title:
