--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -13,7 +13,7 @@ bind = ALT, Space, exec, wofi
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
-bind = $mainMod SHIFT, I, exec, grim -o DP-1 | wl-copy
+bind = $mainMod SHIFT, I, exec, grim -o DP-2 | wl-copy
 
 # Move focus with mainMod + Vim navigation
 bind = $mainMod, h, movefocus, l
@@ -60,3 +60,6 @@ bind = , XF86AudioMute, exec, ~/.dotfiles/scripts/change_volume.sh mute
 
 # Color Picker
 bind = $mainMod SHIFT, P, exec, hyprpicker -a
+
+# Reloads
+bind = $mainMod SHIFT, W, exec, ~/.dotfiles/scripts/reload-waybar.sh
