--- a/streamcontroller/settings/settings.json
+++ b/streamcontroller/settings/settings.json
@@ -6,6 +6,7 @@
         "keep-running": true
     },
     "general": {
-        "hold-time": 0.5
+        "hold-time": 0.5,
+        "app-launches": 32
     }
 }
