feat: switch from alacritty to ghostty

--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -2,7 +2,8 @@
 $mainMod = SUPER
 
 bind = $mainMod SHIFT, Return, exec, neovide
-bind = $mainMod, Return, exec, alacritty
+bind = $mainMod, Return, exec, ghostty
+# bind = $mainMod, Return, exec, alacritty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exec, wlogout --protocol layer-shell
 bind = $mainMod, L, exec, ~/.dotfiles/scripts/lock.sh
