--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -3,8 +3,10 @@
 # monitor=HDMI-A-1,highres,-2160x-1100,1,transform,3
 # monitor=DP-2,preferred,0x-1440,1
 monitor=DP-2,highrr,0x0,1
-monitor=HDMI-A-1,highres,-2160x-1100,1,transform,3
+# monitor=HDMI-A-1,highres,-2160x-1100,1,transform,3
+monitor=HDMI-A-1,preferred,-2160x-1100,1,transform,3
 monitor=DP-1,highrr,0x-1440,1
+monitor=FALLBACK,1920x1080@60,auto,1
 
 # Execs (Startup applications)
 exec-once=gammastep -l 39.962:-82.996
