--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -3,45 +3,51 @@ general {
 }
 
 background {
-  monitor = DP-2
-  path = /tmp/screenshot.png
+  path = screenshot
+  color = rgba(30, 30, 46, 1.0)
 
-  # blur_passes = 0
-  # blur_size = 7
-  # noise = 0.0117
+  blur_passes = 2
+  blur_size = 7
+  noise = 0.0117
   contrast = 0.8172
-  brightness = 0.8172
-  vibrancy = 0.1696
-  vibrancy_darkness = 0.0
+  # brightness = 0.8172
+  # brightness = 0.9
+  # vibrancy = 0.1696
+  # vibrancy_darkness = 0.0
 }
 
 input-field {
-    monitor =
-    size = 200, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
+    monitor = DP-2
+    # monitor =
+    size = 250, 50
+    outline_thickness = 2
+    inner_color = rgba(0, 0, 0, 0.0) 
+    dots_size = 0.33 
+    dots_spacing = 0.15 
     dots_center = false
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
+    dots_rounding = -1 
+    placeholder_text = <i>Be careful...</i> 
+    fail_text = <i>WRONG! GTFO!<b>($ATTEMPTS)</b></i>
+    outer_color = rgba(fab387ee)  rgba(f9e2afee) 45deg
+    check_color= rgba(89dcebee) rgba(74c7ecee) 120deg
+    fail_color= rgba(f38ba8ee) rgba(eba0acee) 40deg
+    font_color = rgb(143, 143, 143)
     fade_on_empty = true
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
-
-    position = 0, -20
+    fade_timeout = 4000
+    rounding = 10
+    position = 0, -10
     halign = center
     valign = center
+
+    # hide_input = true
 }
 
 label {
-    monitor =
-    text = Hi there, $USER
-    color = rgba(200, 200, 200, 1.0)
+    monitor = DP-2
+    text = tony, is that you?
+    color = rgba(205, 214, 244, 1.0)
     font_size = 25
-    font_family = Noto Sans
+    font_family = Google Sans Regular
 
     position = 0, 80
     halign = center
