--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -6,9 +6,11 @@ bind = $mainMod, Return, exec, ghostty
 # bind = $mainMod, Return, exec, alacritty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exec, wlogout --protocol layer-shell
-bind = $mainMod, L, exec, ~/.dotfiles/scripts/lock.sh
+bind = $mainMod, L, exec, pidof hyprlock || hyprlock
+# bind = $mainMod, L, exec, ~/.dotfiles/scripts/lock.sh
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, F, togglefloating, 
+bind = $mainMod, U, fullscreen
 bind = ALT, Space, exec, wofi
 # bind = ALT, Space, exec, krunner
 bind = $mainMod, P, pseudo, # dwindle
