--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -37,6 +37,9 @@ env = WLR_USE_LIBINPUT,1
 env = WLR_RENDERER_ALLOW_SOFTWARE,1
 env = WLR_DRM_NO_ATOMIC,1
 
+env = GBM_BACKEND,nvidia-drm
+env = WLR_DRM_DEVICES,/dev/dri/card0
+
 # QT
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
@@ -47,3 +50,7 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = LIBVA_DRIVER_NAME,nvidia
 # env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = APPIMAGELAUNCHER_DISABLE,1
+
+env = HYPRLAND_NO_SPLASH,1
+env = HYPRLAND_NO_HOTPLUG,1
+
