--- a/hypr/general.conf
+++ b/hypr/general.conf
@@ -83,3 +83,6 @@ misc {
 
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
+
+windowrulev2 = tile, class:^(Spotify)$
+windowrulev2 = workspace 9, class:^(Spotify)$
