--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,18 +1,22 @@
 general {
-  lock_cmd = ~/.dotfiles/scripts/lock.sh
+  # lock_cmd = ~/.dotfiles/scripts/lock.sh
+  lock_cmd = pidof hyprlock || hyprlock
   before_sleep_cmd = loginctl lock-session
-  after_sleep_cmd = hyprctl dispatch dpms on
+  # after_sleep_cmd = hyprctl dispatch dpms on
+  after_sleep_cmd = ~/.dotfiles/scripts/dpms_on.sh
 }
 
 listener {
-  timeout = 300
+  timeout = 5
   on-timeout = loginctl lock-session
 }
 
 listener {
-  timeout = 1200
+  timeout = 15
+  # timeout = 1200
   on-timeout = hyprctl dispatch dpms off
-  on-resume = hyprctl dispatch dpms on
+  # on-resume = hyprctl dispatch dpms on
+  on-resume = ~/.dotfiles/scripts/dpms_on.sh
 }
 
 # TODO: Sleep
