--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -14,19 +14,22 @@ experimental_features = 1
 [Patch]
 
 [Setting]
-spotify_path           = $HOME/.local/share/spotify-launcher/install/usr/share/spotify/
+; spotify_path           = $HOME/.local/share/spotify-launcher/install/usr/share/spotify/
+spotfiy_path           = /var/lib/flatpak/app/com.spotify.Client/x86_64/stable/active/files/extra/share/spotify/
 color_scheme           = mocha
 replace_colors         = 1
 overwrite_assets       = 1
 spotify_launch_flags   = 
 check_spicetify_update = 1
-prefs_path             = /home/tony/.config/spotify/prefs
+; prefs_path             = /home/tony/.config/spotify/prefs
+prefs_path             = /home/tony/.var/app/com.spotify.Client/config/spotify/prefs
 current_theme          = catppuccin
 inject_theme_js        = 1
 inject_css             = 1
 always_enable_devtools = 0
+spotify_path           = /var/lib/flatpak/app/com.spotify.Client/x86_64/stable/active/files/extra/share/spotify/
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.52.442.g01893f92
-with    = 2.38.5
+version = 1.2.56.502.ga68d2d4f
+with    = 2.38.7
