fix(hypr): nvidia flags

--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -21,7 +21,7 @@ env = MOZ_ENABLE_WAYLAND,1
 env = MOZ_DISABLE_RDD_SANDBOX,1
 
 # Wayland
-env = GDK_BACKEND,wayland,x11
+env = GDK_BACKEND,wayland,x11,*
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
@@ -29,4 +29,3 @@ env = OZONE_PLATFORM,wayland
 
 env = HYPRLAND_NO_SPLASH,1
 env = HYPRLAND_NO_HOTPLUG,1
-
