--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -60,5 +60,7 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
 # testing
 env = LIBVA_DRIVER_NAME,nvidia
+# COMEMENT OUT IF REGRESSION
 # env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = APPIMAGELAUNCHER_DISABLE,1
