feat(hypr): screenshot editing + clean old scripts

--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -3,19 +3,19 @@ $mainMod = SUPER
 
 bind = $mainMod SHIFT, Return, exec, neovide
 bind = $mainMod, Return, exec, ghostty
-# bind = $mainMod, Return, exec, alacritty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exec, wlogout --protocol layer-shell
 bind = $mainMod, L, exec, pidof hyprlock || hyprlock
-# bind = $mainMod, L, exec, ~/.dotfiles/scripts/lock.sh
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, U, fullscreen
-bind = ALT, Space, exec, wofi
-# bind = ALT, Space, exec, krunner
+bind = $mainMod, Space, exec, walker
+
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
-bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+# bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+bind = $mainMod SHIFT, S, exec, ~/.dotfiles/scripts/screenshot.sh
+bind = $mainMod SHIFT, W, exec, ~/.dotfiles/scripts/screenshot.sh window
 bind = $mainMod SHIFT, I, exec, grim -o DP-2 | wl-copy
 
 # Move focus with mainMod + Vim navigation
