--- a/waybar/config_voyager.jsonc
+++ b/waybar/config_voyager.jsonc
@@ -246,7 +246,7 @@
     "format": "{icon}",
     "all-outputs": true,
     "icon-size": 24,
-    "icon-theme": "Mint-L-Orange",
+    "icon-theme": "Papirus-Dark",
     "tooltip-format": "{title}",
     "on-click": "activate",
     "on-click-middle": "close",
