--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -37,7 +37,7 @@ windowrulev2 = monitor DP-1,title:^(Spotify)$
 # windowrulev2 = center,title:^(Emulator)
 
 # Waybar
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && waybar
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && uwsm app -- waybar
 
 # NVIDIA
 env = _JAVA_AWT_WM_NONREPARENTING=1
