--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -6,6 +6,7 @@ env = WLR_NO_HARDWARE_CURSORS,1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
+env = TERMINAL,ghostty
 
 # SSH
 env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/gcr/ssh
