--- a/hypr/execs.conf
+++ b/hypr/execs.conf
@@ -2,12 +2,13 @@
 exec-once=/usr/lib/polkit-gnome-authentication-agent-1
 exec-once=dbus-update-activation-environment --all
 # exec-once=gnome-keyring-daemon --start --components=secrets,ssh,pcks11
-exec-once=hypridle
-exec-once=hyprpaper
-exec-once=dunst
+exec-once=uwsm app -- hypridle
+exec-once=uwsm app -- hyprpaper
+exec-once=uwsm app -- dunst
+exec-once=uswm app -- walker --gapplication-service
 exec-once=hyprctl dispatch workspace 1
-exec-once=sleep 5; vorta
+exec-once=sleep 5; uwsm app -- vorta
 
 # Startup Applications
-exec-once=sleep 5; mullvad-vpn
+exec-once=sleep 5; uwsm app -- mullvad-vpn
 exec-once=sleep 2; /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
