--- a/hypr/host/voyager.conf
+++ b/hypr/host/voyager.conf
@@ -1,23 +1,39 @@
 # Monitors
-monitor=eDP-1,highres,0x0,1.666667
-monitor=DP-1,highres,0x0,1
+# WARN: If you update this make sure to update line #26
+monitor=eDP-1,highrr,0x0,1.066667
 
 # Workspaces
-workspace=name:1, monitor:eDP-1, persistent:true, default:true
-workspace=name:2, monitor:eDP-1, persistent:true
-workspace=name:3, monitor:eDP-1, persistent:true
-workspace=name:4, monitor:eDP-1, persistent:true
+workspace=1, monitor:eDP-1, persistent:true, default:true
+workspace=2, monitor:eDP-1, persistent:true
+workspace=3, monitor:eDP-1, persistent:true
+workspace=4, monitor:eDP-1, persistent:true
 
-env = WLR_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
+env = WLR_DRM_DEVICES,/dev/dri/card1
 
 gestures {
   workspace_swipe = true
   workspace_swipe_fingers = 3
+  workspace_swipe_distance = 900
+  workspace_swipe_invert = true
 }
 
 # Screen brightness
-bind = , XF86MonBrightnessUp, exec, brightnessctl -s +5%
-bind = , XF86MonBrightnessDown, exec, brightnessctl -s 5%-
+bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
 
+# Mute
+bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+# Sunset screen
 exec-once=gammastep -l 56.6:14.3
+exec-once=sleep 1; nm-applet --indicator
+
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && uwsm app -- waybar --config ~/.dotfiles/waybar/config_voyager.jsonc
+
+# Gestures
+exec-once=libinput-gestures-setup start
+
+# Handle lid close/open
+bindl = , switch:Lid Switch, exec, pidof hyprlock || hyprlock
+bindl = , switch:on:Lid Switch, exec, hyprland keyword monitor eDP-1,disable
+bindl = , switch:off:Lid Switch, exec, hyprland keyword monitor eDP-1,highrr,0x0,1.066667
