--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -15,40 +15,33 @@
   ],
   "modules-right": [
     "keyboard-state",
-    "tray",
+    "group/tray",
     "idle_inhibitor",
     "custom/weather",
     "battery",
     "battery#charging",
     "gamemode",
     "pulseaudio",
+    "privacy",
     "network",
     "custom/dunst",
     "clock"
   ],
   "hyprland/workspaces": {
-    "all-outputs": false,
-    "acitve-only": true,
+    "on-click": "activate",
+    "persistent-only": true,
     "format": "{icon}",
     "format-icons": {
       "active": "",
       "default": ""
     },
-    "sort-by": "ID",
     "persistent-workspaces": {
-      "1": [
-        "DP-2"
-      ],
-      "2": [
-        "DP-2"
-      ],
-      "3": [
-        "DP-2"
-      ],
-      "4": [
-        "DP-2"
-      ]
+      "1": [],
+      "2": [],
+      "3": [],
+      "4": []
     }
+    // "sort-by": "ID"
   },
   "keyboard-state": {
     "numlock": false,
@@ -96,13 +89,29 @@
       "deactivated": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰾫</span>"
     }
   },
+  "group/tray": {
+    "orientation": "inherit",
+    "drawer": {
+      "transition-duration": 600,
+      "children-class": "tray-group-item"
+    },
+    "modules": [
+      "custom/expand-icon",
+      "tray"
+    ]
+  },
+  "custom/expand-icon": {
+    // "format": "< ",
+    "format": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰅁</span>",
+    "tooltip": false
+  },
   "tray": {
     "spacing": 8,
-    "icon-size": 16,
-    // "show-passive-items": true
+    "icon-size": 16
   },
   "clock": {
-    "format": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰙹</span> {:%A, %b %d %I:%M %p}",
+    // "format": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰙹</span> {:%A, %b %d %I:%M %p}",
+    "format": "<span font=\"Material Design Icons\" size='large' font_weight='normal' rise='-1500'>󰙹</span> {:%A, %b %d}",
     "on-click": "xdg-open https://calendar.google.com",
     "tooltip-format": "<tt><small>{calendar}</small></tt>",
     "calendar": {
