feat(install): updated

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -95,6 +95,10 @@
       create: true
       glob: true
       path: walker
+    ~/.config/btop:
+      create: true
+      glob: true
+      path: btop
 
 # Nighthawk (Desktop)
 - defaults:
