feat(hypr): fs and launcher keybinds

--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -6,7 +6,9 @@ bind = $mainMod, Return, exec, ghostty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exec, wlogout --protocol layer-shell
 bind = $mainMod, L, exec, pidof hyprlock || hyprlock
-bind = $mainMod, E, exec, nautilus
+# bind = $mainMod, E, exec, nautilus
+bind = $mainMod, E, exec, EDITOR=vim ghostty -e yazi 
+bind = $mainMod, B, exec, ghostty -e btop
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, U, fullscreen
 bind = $mainMod, Space, exec, walker
