--- a/hypr/animations.conf
+++ b/hypr/animations.conf
@@ -12,4 +12,6 @@ animations {
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default, slide
+    animation = specialWorkspace, 1, 4, default, fade 
+    # animation = specialWorkspace, zoom, 0.25, easeOutBack
 }
