--- a/hypr/general.conf
+++ b/hypr/general.conf
@@ -67,9 +67,12 @@ master {
     new_status = master
 }
 
-gestures {
-    workspace_swipe = off
-}
+# gestures {
+#     workspace_swipe = off
+# }
+# workspace_swipe = what is below now
+# gesture = 3, horizontal, workspace
+
 
 misc {
     # no_direct_scanout = false
