--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -6,7 +6,7 @@ monitor=DP-2,highrr,0x0,1
 # monitor=HDMI-A-1,highres,-2160x-1100,1,transform,3
 monitor=HDMI-A-1,preferred,-2160x-1100,1,transform,3
 monitor=DP-1,highrr,0x-1440,1
-monitor=FALLBACK,1920x1080@60,auto,1
+# monitor=FALLBACK,1920x1080@60,auto,1
 
 # Execs (Startup applications)
 exec-once=gammastep -l 39.962:-82.996
@@ -22,12 +22,22 @@ workspace=name:4, monitor:DP-2, persistent:true
 workspace=name:right-monitor, monitor:HDMI-A-1, default:true, persistent:true
 workspace=name:top-monitor, monitor:DP-1, default:true, persistent:true
 
+# Notepad
+windowrulev2 = float, class:^(obsidian)$
+windowrulev2 = center, class:^(obsidian)$
+windowrulev2 = size 2560 1440, class:^(obsidian)$
+windowrulev2 = workspace special, class:^(obsidian)$
+windowrulev2 = opacity 0.9 0.8, workspace:special, class:^(obsidian)$
+
 # Move Google Meet to Vertical Monitor and Tile
 windowrulev2 = tile,title:^(Google Meet)
 windowrulev2 = monitor HDMI-A-1,title:^(Google Meet)
 
 # Move Spotify to Top Monitor
-windowrulev2 = monitor DP-1,title:^(Spotify)$
+windowrulev2 = workspace top-monitor,title:^(Spotify)
+
+# Move Obsidian to Notepad Workspace
+# windowrulev2 = workspace notepad, class:^(obsidian)$
 
 # Minecraft
 # windowrulev2 = center,title:
@@ -37,7 +47,7 @@ windowrulev2 = monitor DP-1,title:^(Spotify)$
 # windowrulev2 = center,title:^(Emulator)
 
 # Waybar
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && uwsm app -- waybar
+exec-once=sleep 1; dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && uwsm app -- waybar
 
 # NVIDIA
 env = _JAVA_AWT_WM_NONREPARENTING=1
