--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -7,16 +7,16 @@ general {
 }
 
 listener {
-  timeout = 5
+  timeout = 300
   on-timeout = loginctl lock-session
 }
 
 listener {
-  timeout = 15
+  timeout = 600
   # timeout = 1200
   on-timeout = hyprctl dispatch dpms off
-  # on-resume = hyprctl dispatch dpms on
-  on-resume = ~/.dotfiles/scripts/dpms_on.sh
+  on-resume = hyprctl dispatch dpms on
+  # on-resume = ~/.dotfiles/scripts/dpms_on.sh
 }
 
 # TODO: Sleep
