--- a/hypr/execs.conf
+++ b/hypr/execs.conf
@@ -10,5 +10,6 @@ exec-once=hyprctl dispatch workspace 1
 exec-once=sleep 5; uwsm app -- vorta
 
 # Startup Applications
-exec-once=sleep 5; uwsm app -- mullvad-vpn
+# exec-once=sleep 5; uwsm app -- mullvad-vpn
+exec-once=sleep 5; uwsm app -- protonvpn-app
 exec-once=sleep 2; /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
