--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -8,6 +8,7 @@ bind = $mainMod, M, exec, wlogout --protocol layer-shell
 bind = $mainMod, L, exec, pidof hyprlock || hyprlock
 # bind = $mainMod, E, exec, nautilus
 bind = $mainMod, E, exec, EDITOR=vim ghostty -e yazi 
+bind = $mainMod SHIFT, E, exec, uwsm app -- nautilus
 bind = $mainMod, B, exec, ghostty -e btop
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, U, fullscreen
@@ -43,12 +44,15 @@ bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
+bind = $mainMod, ESCAPE, togglespecialworkspace 
+# bind = $mainMod, ESCAPE, workspace, special 
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
 bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, ESCAPE, movetoworkspace, special
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
