build: upgrade spicetify

--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -31,5 +31,5 @@ spotify_path           = /var/lib/flatpak/app/com.spotify.Client/x86_64/stable/a
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.56.502.ga68d2d4f
-with    = 2.38.7
+version = 1.2.63.394.g126b0d89
+with    = 2.42.0
