fix(hypr): nvidia issues

--- a/hypr/general.conf
+++ b/hypr/general.conf
@@ -77,7 +77,9 @@ master {
 misc {
     # no_direct_scanout = false
     # no_direct_scanout = true
-    vfr=false
+    # TODO: testing...
+    # vfr=false
+    vfr=true
     vrr=2
     # no_vfr=1
     disable_hyprland_logo = true
