--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -57,9 +57,10 @@ env = __GL_GSYNC_ALLOWED,1
 env = __GL_VRR_ALLOWED,1
 env = WLR_USE_LIBINPUT,1
 env = WLR_RENDERER_ALLOW_SOFTWARE,1
-env = WLR_DRM_NO_ATOMIC,1
+# env = WLR_DRM_NO_ATOMIC,1
 
-env = GBM_BACKEND,nvidia-drm
+# NOTE: THIS SHOULD NOT BE USED!
+# env = GBM_BACKEND,nvidia-drm
 env = WLR_DRM_DEVICES,/dev/dri/card0
 
 # QT
@@ -70,7 +71,5 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
 # testing
 env = LIBVA_DRIVER_NAME,nvidia
-# COMEMENT OUT IF REGRESSION
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = APPIMAGELAUNCHER_DISABLE,1
