--- a/hypr/execs.conf
+++ b/hypr/execs.conf
@@ -5,6 +5,7 @@ exec-once=dbus-update-activation-environment --all
 exec-once=uwsm app -- hypridle
 exec-once=uwsm app -- hyprpaper
 exec-once=uwsm app -- dunst
+exec-once=uwsm app -- elephant
 exec-once=uswm app -- walker --gapplication-service
 exec-once=hyprctl dispatch workspace 1
 exec-once=sleep 5; uwsm app -- vorta
