fix(hypr): various

--- a/hypr/execs.conf
+++ b/hypr/execs.conf
@@ -6,11 +6,10 @@ exec-once=uwsm app -- hypridle
 exec-once=uwsm app -- hyprpaper
 exec-once=uwsm app -- dunst
 exec-once=uwsm app -- elephant
-exec-once=uswm app -- walker --gapplication-service
 exec-once=hyprctl dispatch workspace 1
 exec-once=sleep 5; uwsm app -- vorta
 
 # Startup Applications
-# exec-once=sleep 5; uwsm app -- mullvad-vpn
 exec-once=sleep 5; uwsm app -- protonvpn-app
 exec-once=sleep 2; /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
+exec-once=sleep 2; uwsm app -- walker --gapplication-service
