--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -21,6 +21,9 @@ bind = $mainMod SHIFT, S, exec, ~/.dotfiles/scripts/screenshot.sh
 bind = $mainMod SHIFT, W, exec, ~/.dotfiles/scripts/screenshot.sh window
 bind = $mainMod SHIFT, I, exec, grim -o DP-2 | wl-copy
 
+# Wallpaper
+bind = $mainMod, N, exec, ~/.dotfiles/scripts/next-wallpaper.sh
+
 # Move focus with mainMod + Vim navigation
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
