feat: tmux paste image from clipboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,6 +45,9 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
+# Paste images
+bind -n C-v run-shell -b "~/.dotfiles/scripts/image-buffer-to-path.sh | tmux load-buffer -; tmux paste-buffer"
+
 set -s escape-time 0
 
 # Start windows at 1 instead of 0 for ease of 
