--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -15,7 +15,7 @@ bind = $mainMod, Space, exec, walker
 
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
-# bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy
 bind = $mainMod SHIFT, S, exec, ~/.dotfiles/scripts/screenshot.sh
 bind = $mainMod SHIFT, W, exec, ~/.dotfiles/scripts/screenshot.sh window
 bind = $mainMod SHIFT, I, exec, grim -o DP-2 | wl-copy
