--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -14,22 +14,21 @@ experimental_features = 1
 [Patch]
 
 [Setting]
-; spotify_path           = $HOME/.local/share/spotify-launcher/install/usr/share/spotify/
-spotfiy_path           = /var/lib/flatpak/app/com.spotify.Client/x86_64/stable/active/files/extra/share/spotify/
+spotify_path           = $HOME/.local/share/spotify-launcher/install/usr/share/spotify/
+; spotfiy_path           = /var/lib/flatpak/app/com.spotify.Client/x86_64/stable/active/files/extra/share/spotify/
 color_scheme           = mocha
 replace_colors         = 1
 overwrite_assets       = 1
 spotify_launch_flags   = 
 check_spicetify_update = 1
-; prefs_path             = /home/tony/.config/spotify/prefs
-prefs_path             = /home/tony/.var/app/com.spotify.Client/config/spotify/prefs
+prefs_path             = /home/tony/.config/spotify/prefs
+; prefs_path             = /home/tony/.var/app/com.spotify.Client/config/spotify/prefs
 current_theme          = catppuccin
 inject_theme_js        = 1
 inject_css             = 1
 always_enable_devtools = 0
-spotify_path           = /var/lib/flatpak/app/com.spotify.Client/x86_64/stable/active/files/extra/share/spotify/
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.63.394.g126b0d89
-with    = 2.42.0
+version = 1.2.77.358.g4339a634
+with    = 2.42.3
