--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -10,7 +10,7 @@ monitor=DP-1,highrr,0x-1440,1
 
 # Execs (Startup applications)
 exec-once=gammastep -l 39.962:-82.996
-exec-once=sleep 5; /usr/lib/kdeconnectd
+# exec-once=sleep 5; /usr/lib/kdeconnectd
 exec-once=sleep 5; streamcontroller -b
 exec-once=sleep 5; obsidian --ozone-platform=wayland --ozone-platform-hint=auto --enable-features=UseOzonePlatform,WaylandWindowDecorations --disable-gpu
 
