--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,8 +45,8 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-# Paste images
-bind -n C-v run-shell -b "~/.dotfiles/scripts/image-buffer-to-path.sh | tmux load-buffer -; tmux paste-buffer"
+# Paste images (pass through to vim for visual block mode)
+bind-key -n C-v if-shell "$is_vim" 'send-keys C-v' 'run-shell -b "~/.dotfiles/scripts/image-buffer-to-path.sh | tmux load-buffer -; tmux paste-buffer"'
 
 set -s escape-time 0
 
