feat: glob application entries to local share

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -103,6 +103,11 @@
       create: true
       glob: true
       path: btop
+    # Desktop Applications (Wayland flags)
+    ~/.local/share/applications:
+      create: true
+      glob: true
+      path: applications
 
 # Nighthawk (Desktop)
 - defaults:
