fix: neovim codeium disabled fts + eslint

--- a/gamemode/gamdemode.ini
+++ b/gamemode/gamdemode.ini
@@ -6,9 +6,12 @@ reaper_freq=5
 desiredgov=performance
 ; The default governor is used when leaving GameMode instead of restoring the original value
 ;defaultgov=powersave
+;
+desiredprof=performance
 
 ; The iGPU desired governor is used when the integrated GPU is under heavy load
 igpu_desiredgov=powersave
+
 ; Threshold to use to decide when the integrated GPU is under heavy load.
 ; This is a ratio of iGPU Watts / CPU Watts which is used to determine when the
 ; integraged GPU is under heavy enough load to justify switching to
@@ -23,7 +26,7 @@ softrealtime=off
 
 ; GameMode can renice game processes. You can put any value between 0 and 20 here, the value
 ; will be negated and applied as a nice value (0 means no change). Defaults to 0.
-renice=20
+renice=0
 
 ; By default, GameMode adjusts the iopriority of clients to BE/0, you can put any value
 ; between 0 and 7 here (with 0 being highest priority), or one of the special values
@@ -34,6 +37,8 @@ ioprio=0
 ; Sets whether gamemode will inhibit the screensaver when active
 ; Defaults to 1
 inhibit_screensaver=1
+
+disable_splitlock=1
 
 [filter]
 ; If "whitelist" entry has a value(s)
