feat: vpn system

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ spicetify/*
 !spicetify/Themes/*
 !spicetify/config-xpui.ini
 cava/shaders/
+
+# WireGuard configs contain private keys
+wireguard/configs/*.conf
