--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -74,3 +74,7 @@ bind = $mainMod SHIFT, P, exec, hyprpicker -a
 
 # Reloads
 bind = $mainMod SHIFT, W, exec, ~/.dotfiles/scripts/reload-waybar.sh
+
+# VPN controls
+bind = $mainMod, V, exec, ~/.dotfiles/scripts/vpn/vpn-toggle.sh
+bind = $mainMod SHIFT, V, exec, ~/.dotfiles/scripts/vpn/vpn-menu.sh
