--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,11 @@
       description: Installing greetd config
     - command: sudo mkdir -p /etc/systemd/system/greetd.service.d && sudo ln -sf $(pwd)/greetd/greetd.service.d/* /etc/systemd/system/greetd.service.d/
       description: Installing greetd service override
+    # VPN/WireGuard system files (sudoers must be copied, not symlinked)
+    - command: sudo cp $(pwd)/system/sudoers.d/wireguard /etc/sudoers.d/wireguard && sudo chown root:root /etc/sudoers.d/wireguard && sudo chmod 440 /etc/sudoers.d/wireguard
+      description: Installing wireguard sudoers config
+    - command: sudo cp $(pwd)/system/systemd/vpn-netns.service /etc/systemd/system/vpn-netns.service && sudo systemctl daemon-reload && sudo systemctl enable vpn-netns.service
+      description: Installing VPN namespace systemd service
 - link:
     # tty configurations
     ~/.dircolors: .dircolors
@@ -107,7 +112,26 @@
     ~/.local/share/applications:
       create: true
       glob: true
-      path: applications
+      path: applications/*
+    # VPN scripts
+    ~/.local/bin/vpn-up:
+      path: scripts/vpn/vpn-up.sh
+      create: true
+    ~/.local/bin/vpn-down:
+      path: scripts/vpn/vpn-down.sh
+      create: true
+    ~/.local/bin/vpn-toggle:
+      path: scripts/vpn/vpn-toggle.sh
+      create: true
+    ~/.local/bin/vpn-menu:
+      path: scripts/vpn/vpn-menu.sh
+      create: true
+    ~/.local/bin/vpn-status:
+      path: scripts/vpn/vpn-status.sh
+      create: true
+    ~/.local/bin/novpn-exec:
+      path: scripts/vpn/novpn-exec.sh
+      create: true
 
 # Nighthawk (Desktop)
 - defaults:
