--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -30,5 +30,5 @@ always_enable_devtools = 0
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.77.358.g4339a634
-with    = 2.42.3
+version = 1.2.79.425.g1d0fcf61
+with    = 2.42.5
