refactor: hypr general

--- a/hypr/general.conf
+++ b/hypr/general.conf
@@ -67,13 +67,6 @@ master {
     new_status = master
 }
 
-# gestures {
-#     workspace_swipe = off
-# }
-# workspace_swipe = what is below now
-# gesture = 3, horizontal, workspace
-
-
 misc {
     # no_direct_scanout = false
     # no_direct_scanout = true
@@ -90,4 +83,4 @@ windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
 
 windowrulev2 = tile, class:^(Spotify)$
-windowrulev2 = workspace 9, class:^(Spotify)$
+# windowrulev2 = workspace 9, class:^(Spotify)$
