--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -73,3 +73,7 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = APPIMAGELAUNCHER_DISABLE,1
+
+gestures {
+  workspace_swipe = false
+}
