fix: voyager gestures

--- a/hypr/host/voyager.conf
+++ b/hypr/host/voyager.conf
@@ -10,12 +10,12 @@ workspace=4, monitor:eDP-1, persistent:true
 
 env = WLR_DRM_DEVICES,/dev/dri/card1
 
-gestures {
-  workspace_swipe = true
-  workspace_swipe_fingers = 3
-  workspace_swipe_distance = 900
-  workspace_swipe_invert = true
-}
+# gestures {
+#   workspace_swipe = true
+#   workspace_swipe_fingers = 3
+#   workspace_swipe_distance = 900
+#   workspace_swipe_invert = true
+# }
 
 # Screen brightness
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +10%
