fix: seahorse auto unlock

--- a/hypr/execs.conf
+++ b/hypr/execs.conf
@@ -1,15 +1,15 @@
 # Startup executables
 exec-once=/usr/lib/polkit-gnome-authentication-agent-1
 exec-once=dbus-update-activation-environment --all
-# exec-once=gnome-keyring-daemon --start --components=secrets,ssh,pcks11
+exec-once=gnome-keyring-daemon --start --components=secrets,ssh,pkcs11
 exec-once=uwsm app -- hypridle
 exec-once=uwsm app -- hyprpaper
 exec-once=uwsm app -- dunst
 exec-once=uwsm app -- elephant
 exec-once=hyprctl dispatch workspace 1
-exec-once=sleep 5; uwsm app -- vorta
 
 # Startup Applications
 exec-once=sleep 5; vpn-up
 exec-once=sleep 2; uwsm app -- /home/tony/.dotfiles/scripts/wallpaper-random.sh /home/tony/Pictures/Wallpapers
 exec-once=sleep 2; uwsm app -- walker --gapplication-service
+exec-once=sleep 5; uwsm app -- vorta
