--- a/hypr/host/nighthawk.conf
+++ b/hypr/host/nighthawk.conf
@@ -13,6 +13,7 @@ exec-once=gammastep -l 39.962:-82.996
 # exec-once=sleep 5; /usr/lib/kdeconnectd
 exec-once=sleep 5; streamcontroller -b
 exec-once=sleep 5; obsidian --ozone-platform=wayland --ozone-platform-hint=auto --enable-features=UseOzonePlatform,WaylandWindowDecorations --disable-gpu
+exec-once=sleep 6; ghostty --title=claude-notes --command="/usr/bin/fish -c 'cd /home/tony/notes && /home/tony/.local/share/pnpm/claude'"
 
 # Workspaces
 workspace=name:1, monitor:DP-2, persistent:true, default:true
@@ -22,12 +23,18 @@ workspace=name:4, monitor:DP-2, persistent:true
 workspace=name:right-monitor, monitor:HDMI-A-1, default:true, persistent:true
 workspace=name:top-monitor, monitor:DP-1, default:true, persistent:true
 
-# Notepad
+# Notepad (special workspace: Obsidian 70% left, Claude Code 30% right)
 windowrulev2 = float, class:^(obsidian)$
-windowrulev2 = center, class:^(obsidian)$
-windowrulev2 = size 2560 1440, class:^(obsidian)$
+windowrulev2 = size 2580 2000, class:^(obsidian)$
+windowrulev2 = move 50 50, class:^(obsidian)$
 windowrulev2 = workspace special, class:^(obsidian)$
-windowrulev2 = opacity 0.9 0.8, workspace:special, class:^(obsidian)$
+windowrulev2 = opacity 0.9, class:^(obsidian)$
+
+windowrulev2 = float, title:^(claude-notes)$
+windowrulev2 = size 1120 2000, title:^(claude-notes)$
+windowrulev2 = move 2670 50, title:^(claude-notes)$
+windowrulev2 = workspace special, title:^(claude-notes)$
+windowrulev2 = opacity 0.9, title:^(claude-notes)$
 
 # Move Google Meet to Vertical Monitor and Tile
 windowrulev2 = tile,title:^(Google Meet)
